--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<a class="optionB" href="javascript:alert('Bon día profe\nAquí no hi ha contingut.\n        - Adrián Matas Muñoz')">Desserts</a>
 				<a class="optionB" href="javascript:alert('Bon día profe\nAquí no hi ha contingut.\n        - Adrián Matas Muñoz')">Healthy</a>
 			</div>
-			<div class="articleSection">
+			<section class="articleSection">
 				<h2 class="recipeNameNormal">Latest recipes</h2>
 				<div class="articleContainer">
 					<article>
@@ -61,8 +61,18 @@
 						<button class="recipeBtn" onclick="alert('Bon día profe\nAquí no hi ha contingut.\n        - Adrián Matas Muñoz')">See recipe</button>
 					</article>
 				</div>
-			</div>
-			<div class="articleSection">
+			</section>
+			<section class="emailRegisterSection">
+				<div>
+					<h3>Never miss a recipe</h3>
+					<p>Join thousands of Company subscribers and get our best recipes delivered each week!</p>
+				</div>
+				<div>
+					<input name="emailInput" placeholder="Your email here">
+					<button class="SubmitBtn" onclick="alert('El botó encara no funciona.\nNo hem fet Javascript encara.\n(Encara així, aquest missatge empra Javascript)');">Submit</button>
+				</div>
+			</section>
+			<section class="articleSection">
 				<h2 class="recipeNameNormal">Most popular recipes</h2>
 				<div class="articleContainer">
 					<article>
@@ -116,7 +126,7 @@
 						<button class="recipeBtn" onclick="alert('Bon día profe\nAquí no hi ha contingut.\n        - Adrián Matas Muñoz')">See recipe</button>
 					</article>
 				</div>
-			</div>
+			</section>
 		</body>
 		<footer>
 			<div class="authorDiv">
